prod-mentolder/oauth2-proxy-dev-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-dev
  namespace: ${WORKSPACE_NAMESPACE}
spec:
  forwardAuth:
    address: http://oauth2-proxy-dev.${WORKSPACE_NAMESPACE}.svc.cluster.local:4181/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
