prod-mentolder/patch-livekit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-server
  namespace: workspace
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - gekko-hetzner-3
